After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778659 - epiphany-Gtk-CRITICAL: gtk_widget_set_sensitive: assertion 'GTK_IS_WIDGET (widget)' failed
epiphany-Gtk-CRITICAL: gtk_widget_set_sensitive: assertion 'GTK_IS_WIDGET (wi...
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Downloads
3.22.x (obsolete)
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-15 10:13 UTC by Andres Gomez
Modified: 2017-02-15 16:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
BT from gdb for epiphany (220.72 KB, text/plain)
2017-02-15 10:13 UTC, Andres Gomez
  Details
downloads-popover: Disconnect more signals when popover is destroyed (2.62 KB, patch)
2017-02-15 16:33 UTC, Michael Catanzaro
committed Details | Review

Description Andres Gomez 2017-02-15 10:13:15 UTC
Created attachment 345794 [details]
BT from gdb for epiphany

Epiphany 3.22.5 and WebKit 2.15.4

And the env variable:

"export G_DEBUG=fatal-criticals"

The compilation was done with CMake args:

'-DPORT=GTK -DCMAKE_BUILD_TYPE=Release -DENABLE_MINIBROWSER=ON -DCMAKE_C_FLAGS_RELEASE="-O0 -g -DNDEBUG  -DG_DISABLE_CAST_CHECKS" -DCMAKE_CXX_FLAGS_RELEASE="-O0 -g -DNDEBUG -DG_DISABLE_CAST_CHECKS"'

After visiting several pages, eventually, I download a PDF from a link and epiphany hits a SIGTRAP when the download finished.
Comment 1 Michael Catanzaro 2017-02-15 16:33:20 UTC
The following fix has been pushed:
da8ce25 downloads-popover: Disconnect more signals when popover is destroyed
Comment 2 Michael Catanzaro 2017-02-15 16:33:24 UTC
Created attachment 345851 [details] [review]
downloads-popover: Disconnect more signals when popover is destroyed

These signals can run after the popover has been destroyed. We don't
want that. Speculative fix for this critical:

epiphany-Gtk-CRITICAL: gtk_widget_set_sensitive: assertion 'GTK_IS_WIDGET (widget)' failed