downloads-popover: Disconnect more signals when popover is destroyed

These signals can run after the popover has been destroyed. We don't
want that. Speculative fix for this critical:

epiphany-Gtk-CRITICAL: gtk_widget_set_sensitive: assertion 'GTK_IS_WIDGET (widget)' failed

https://bugzilla.gnome.org/show_bug.cgi?id=778659